--- a/src/components/Home/Hero/style.scss
+++ b/src/components/Home/Hero/style.scss
@@ -1,3 +1,31 @@
 #hero {
-  background-image: url("../../assets/img/mainImage.png");
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 529px;
+	width: 100%;
+    margin: 30px 0 ;
+
+    .hero{
+        display: flex;        
+        justify-content: center;
+        padding: 210px  ;
+
+    }
+	h1 {
+		color: #fff;
+		font-family: Public Sans, sans-serif;
+		font-size: 48px;
+		font-style: normal;
+		font-weight: 700;
+		line-height: 120%;
+	}
+
+	p {
+		color: var(--Text-color, #19272e);
+		font-family: Public Sans, sans-serif;
+		font-size: 18px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: 120%; /* 21.6px */
+	}
 }
