--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -23,6 +23,7 @@
 
       .active {
         font-size: 20px;
+        ;
         transition: 0.5s;
       }
     }
@@ -37,11 +38,12 @@
     }
 
     .icons {
-      width: 120px;
+      width: 200px;
       height: 24px;
 
       display: flex;
       gap: 10px;
+      align-items: center;
 
       font-size: 20px;
 
