--- a/src/Pages/Cart/style.scss
+++ b/src/Pages/Cart/style.scss
@@ -93,6 +93,7 @@
           text-decoration-line: underline;
           position: absolute;
           right: 0;
+          cursor: pointer;
         }
 
       }
@@ -103,7 +104,7 @@
       width: 300px;
       display: flex;
       flex-direction: column;
-      padding-top: 27px;
+      padding: 27px 0 ;
       gap: 30px 0 ;
 
       h3{
