--- a/src/Pages/Books/style.scss
+++ b/src/Pages/Books/style.scss
@@ -17,7 +17,7 @@
 				background-color: lime;
 				border-radius: 30px;
 				display: flex;
-				justify-content: center;
+				justify-content: space-around;
 				width: 16.5%;
 			}
 
@@ -35,8 +35,10 @@
 					cursor: pointer;
 					height: 40px;
 					transition: 1s;
-					width: 130px;
-
+					width: 150px;
+					display: flex;
+                    justify-content: space-between;
+					align-items: center;
 					&:hover {
 						background: aqua;
 						color: #222;
