--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -29,12 +29,8 @@
       }
 
       .active {
-        font-size: 20px;
-        transition: 0.5s;
+        border-bottom: 1px solid blue ;
 
-        @media (min-width: 768px) {
-          font-size: 22px;
-        }
       }
     }
 
