--- a/src/Pages/Cart/style.scss
+++ b/src/Pages/Cart/style.scss
@@ -32,11 +32,11 @@
         width: 560px ;
         margin: 30px 0 ;
         padding-bottom: 32px ;
-        border-bottom: 1px solid rgba(25, 39, 46, 0.30);
         position: relative;
 
         img{
           width: 25%  ;
+          height: 200px;
         }
 
         .infoOfBook{
@@ -91,10 +91,10 @@
           font-size: 14px;
           font-weight: 700;
           letter-spacing: -0.4px;
-          text-decoration-line: underline;
           position: absolute;
           right: 0;
           cursor: pointer;
+          text-decoration: none;
         }
 
       }
@@ -132,7 +132,6 @@
           padding-bottom: 30px;
           display: flex;
           justify-content: space-between;
-          border-bottom: 1px solid  #19272E;
         }
 
         .total{
