--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -29,8 +29,7 @@
       }
 
       .active {
-        border-bottom: 1px solid blue ;
-
+        border-bottom: 2px solid #0081ff;
       }
     }
 
