--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,29 @@
-*{
-    margin: 0 ;
-    padding: 0;
+* {
+	margin: 0;
+	padding: 0;
 }
 
 .container {
-    width: 1140px;
-    margin: 0 auto;
-    padding: 0;
+	max-width: 1140px;
+	margin: 0 auto;
+	padding: 0;
+}
+
+@media screen and (max-width: 1024px) {
+	.container {
+		padding: 10px;
+	}
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 body {
-    font-family: 'Public Sans', sans-serif;
+	font-family: 'Public Sans', sans-serif;
+}
+
+body {
+	padding: 0;
+	margin: 0;
 }
