--- a/src/components/Home/AboutUs/style.scss
+++ b/src/components/Home/AboutUs/style.scss
@@ -13,6 +13,7 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
+        flex-wrap: wrap;
 
 
         .aboutUs--content__photo{
